deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isowean-api
  namespace: caravana
  labels:
    app: isowean-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: isowean-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: isowean-api
    spec:
      containers:
      - name: isowean-api
        image: caravanahub/isowean-api:9
        ports:
        - containerPort: 4000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: isowean-api
  namespace: caravana
  labels:
    app: isowean-api
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 4000
  selector:
    app: isowean-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isowean-api-ingress
  namespace: caravana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.isowean.com
      secretName: isowean-api-tls
  rules:
    - host: api.isowean.com
      http:
        paths:
        - backend:
            service:
              name: isowean-api
              port:
                number: 80
          pathType: ImplementationSpecific
